--- a/qml.qrc
+++ b/qml.qrc
@@ -10,5 +10,6 @@
         <file>UtilidadesForm.ui.qml</file>
         <file>Toast.qml</file>
         <file>ToastManager.qml</file>
+        <file>limpiar.png</file>
     </qresource>
 </RCC>
