Started to work in diferent text for console

--- a/qml.qrc
+++ b/qml.qrc
@@ -13,5 +13,6 @@
         <file>limpiar.png</file>
         <file>connect.png</file>
         <file>disconnect.png</file>
+        <file>vt100.py</file>
     </qresource>
 </RCC>
